downloaded iconmoon fonts locally

--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -54,9 +54,9 @@
                 </div>
 
                 <ul class="gn-menu" id="site-drawer-menu">
-                  <li><a class="gn-icon gn-icon-home" href="/#/">Home</a></li>
-                  <li><a class="gn-icon gn-icon-faq" href="/#/faq/">FAQ</a></li>
-                  <li><a class="gn-icon gn-icon-about" href="/#/about/">About</a></li>
+                  <li><a class="gn-icon gn-icon-home" href="#/">Home</a></li>
+                  <li><a class="gn-icon gn-icon-faq" href="#/faq/">FAQ</a></li>
+                  <li><a class="gn-icon gn-icon-about" href="#/about/">About</a></li>
                 </ul>
 
                 <div id="site-bottom-copyright">
@@ -196,10 +196,11 @@
     <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
     <script src="js_libs/jquery.ui.touch-punch.min.js"></script>
 
-    <link rel="stylesheet" href="http://i.icomoon.io/public/temp/0ed3c7581b/UntitledProject/style.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_view.css">
     <link rel="stylesheet" href="style_drawer.css">
+
+    <link rel="stylesheet" href="style_icomoon.css">
 
     <script type="application/dart" src="spitoshare_main.dart"></script>
 </body>
