fixing some bugs with buttons left as paper-button

--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -143,7 +143,7 @@
                                 <form id="view-spit-form" onsubmit="return false;">
                                     <input id="spit-id" class="editor-input-text" name="spit-id" maxlength="20" type="text"
                                            autofocus required="" placeholder="Spit ID"/>
-                                    <button type="submit"><paper-button raised="">View Spit</paper-button></button>
+                                    <button type="submit" class="paper-button ripplelink">View Spit</button>
                                 </form>
 
                                 <div id="view-spit-errors" class="disabled-element"></div>
@@ -154,7 +154,7 @@
                                             <section class="spit-meta-top">
                                                 <ul>
                                                     <li><h1 id="spit-header" title="Click and then CRTL + C to copy the link"></h1></li>
-                                                    <li><a id="spit-absurl" href="#" title="visit spit link"><paper-button raised>GO</paper-button></a></li>
+                                                    <li><a id="spit-absurl" href="#" title="visit spit link"><button class="paper-button ripplelink">GO</button></a></li>
                                                 </ul>
                                             </section>
                                         </div>
