added combined css

--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -9,10 +9,13 @@
 
     <!--<link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">-->
     <link rel="stylesheet" href="styles/jquery-ui_266782770b18a4f0c6a5042adfc36aa5.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style_view.css">
-    <link rel="stylesheet" href="style_drawer.css">
 
+    <link rel="stylesheet" href="styles/spito_combined.css">
+    <!--
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style_view.css">
+    <link rel="stylesheet" href="styles/style_drawer.css">
+    -->
     <script src="packages/web_components/webcomponents.min.js"></script>
 
     <link rel="import" href="js_libs/bower_components/paper-radio-group/paper-radio-group.html">
@@ -177,8 +180,10 @@
 
                         <div id="faq-page" class="content">
                             <h1>FAQ - coming soon</h1>
+                            <!--
                             <button class="paper-button ripplelink">Login</button>
                             <a class="paper-button ripplelink" href="">Login</a>
+                            -->
                         </div>
 
                         <div id="about-page" class="content">
