added content in the about and FAQ sections

--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -182,7 +182,44 @@
                         </div>
 
                         <div id="faq-page" class="content">
-                            <h1>FAQ - coming soon</h1>
+                            <h1>FAQ &mdash; Frequently Asked Questions</h1>
+                            <p>Below you will find some of the most common questions I get for Spito Share.
+                              </br>In case you have a question not covered here don't hesitate to <a href="#/about/">contact me</a>.</p>
+
+                            <ul>
+
+                              <li>
+                                <h3>What is a this ?</h3>
+                                <p><em>Spito Share</em> is a fun project I started last summer and its purpose was for me to get acquainted with Go language (#golang).
+                                    </br>Although it is not a commercial product feel free to use it for your own projects or personal social media sharing needs. I promise that even if I switch the project's internals/back-end to another framework or server I will keep the active/alive links reachable.</p>
+                              </li>
+
+                              <li>
+                                <h3>What is a <em>Spit</em> ?</h3>
+                                <p><em>Spit</em> is the nickname, if you want, for all the created links through <em>Spito Share</em>.</p>
+                              </li>
+
+                              <li>
+                                <h3>Is my uploaded content secure ?</h3>
+                                <p><em>No</em></br>Anyone with access to the Spit URL created can see your content.
+                                      Future versions will include private spit links.</p>
+                              </li>
+
+                              <li>
+                                <h3>Can I delete a Spit link I made ?</h3>
+                                <p><em>No</em></br>Only by contacting me directly and in extreme cases. The reason is that since everything is public we don't want anyone to be able to delete other's links.</p>
+                              </li>
+
+                              <li>
+                                <h3>What is the point of the <em>Text & Source Code</em> type of Spit ?</h3>
+                                <p>At the moment it seems to be just like a big text box where you can put your text or source code and get a shareable link for it to allow easy sharing with others. Soon more features will be added like code syntax highlighting. The goal is to have a minimalistic plain text or source code sharing tool, like a stripped-down version of <a href="https://gist.github.com/" target="_blank">Gists</a>.</p>
+                              </li>
+
+                              <li>
+                                <h3>Is there any public API I can use ?</h3>
+                                <p><em>Yes</em></br>Visit our <a href="#/developer">Developer</a> section (coming soon).</p>
+                              </li>
+                            </ul>
                             <!--
                             <a href="#/view/" class="paper-icon-button ripplelink" title="Search for a spit">
                                 <svg viewBox="-4 -4 32 32" height="100%" width="100%" preserveAspectRatio="xMidYMid meet" fit="" style="pointer-events: none; display: block;"><g><path d="M3 17.25v3.75h3.75l11.06-11.06-3.75-3.75-11.06 11.06zm17.71-10.21c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"></path></g></svg>
@@ -191,7 +228,20 @@
                         </div>
 
                         <div id="about-page" class="content">
-                            <h1>About - coming soon</h1>
+                            <h1>About</h1>
+
+                            <section>
+                              <p><strong>Spito Share</strong> started as a fun project last year and I continued to add features, mostly improving the UI with materialish design.</p>
+                              <p>If you have any questions or want to talk to me for any reason (feedback extremely welcome) please contact me using any of the following methods:
+                                <ul>
+                                  <li>Personal website: <a href="http://lambrospetrou.com/about" target="_blank">lambrospetrou.com</a></li>
+                                  <li>Twitter: <a href="https://twitter.com/lambrospetrou" target="_blank">twitter.com/lambrospetrou</a></li>
+                                </ul>
+                              </p>
+                              <p>I have plans to open source the project as soon as I find some time to refactor a bit the code (I guess in 1-2 months after I finish my MSc.CS @ University of Oxford).</p>
+                              <p>If you want to see my other open sourced projects please visit my <a href="http://github.com/lambrospetrou" target="_blank">Github profile</a>.</p>
+                            </section>
+
                         </div>
 
                     </div> <!-- content-container -->
