added more description to about page

--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -191,8 +191,9 @@
 
                               <li>
                                 <h3>What is a this ?</h3>
-                                <p><em>Spito Share</em> is a fun project I started last summer and its purpose was for me to get acquainted with Go language (#golang).
-                                    </br>Although it is not a commercial product feel free to use it for your own projects or personal social media sharing needs. I promise that even if I switch the project's internals/back-end to another framework or server I will keep the active/alive links reachable.</p>
+                                <p><em>Spito Share</em> is a fun project I started last summer and its purpose was for me to get acquainted with Go language (#golang).</p>
+                                <p>Spito Share is a super-fast minimalistic URL shortener service and a text/source code sharing service. In a few words, you can share either a long URL or any text you want with your friends or colleagues using the short generated Spit link (spi.to/xxx).</p>
+                                <p>Although it is not a commercial product feel free to use it for your own projects or personal social media sharing needs. I promise that even if I switch the project's internals/back-end to another framework or server I will keep the active/alive links reachable.</p>
                               </li>
 
                               <li>
