fixed the link on the header to point to spi.to

--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -38,7 +38,7 @@
                             <span><img width="48px" height="48px" src="s/imgs/spito-share-optimized.png"></span>
                         </span>
                         <div id="site-header-title-text">
-                            <a href="http://cyari.es/spito/">Spito Share <sup><em>BETA</em></sup></a>
+                            <a href="http://spi.to/">Spito Share <sup><em>BETA</em></sup></a>
                         </div>
                     </div>
                     <div id="site-header-tools">
