--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -251,6 +251,6 @@
 
     <script defer async src="s/js_libs/lp-material.js"></script>
     <!--<script type="application/dart" src="spitoshare_main.dart"></script>-->
-    <script src="spitoshare_main.js"></script>
+    <script src="spitoshare_main.dart.js"></script>
 </body>
 </html>
