--- a/SpitoShareDart/web/index.html
+++ b/SpitoShareDart/web/index.html
@@ -2,6 +2,8 @@
 
 <html>
 <head>
+    <meta http-equiv="refresh" content="5;URL='https://www.lambrospetrou.com'" />   
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -76,6 +78,11 @@
 
                 <div class="outer-content">
                     <div class="content-container">
+
+                        <div>
+                            <h2>Service Unavailable :)</h2>
+                            <p>The spi.to service is currently being migrated to a new back-end. In <strong>5 seconds</strong> you will be redirected to <a href="https://www.lambrospetrou.com">www.lambrospetrou.com</a> until the migration is over and this service comes online again.</p>
+                            </div>
 
                         <div id="home-page" class="content"><form id="new-spit-form" onsubmit="return false;">
 
